feat: add GPU infra create, read, control and swagger UI
